# ascii-avatar

./: .gitignore  CHANGELOG.md  README.md  USAGE.md  install.sh  pyproject.toml
docs/: agent-setup.md
docs/plans/: 2026-03-23-ascii-avatar-implementation.md  2026-03-23-voice-channel-design.md  2026-03-23-voice-loop-fix.md  2026-03-26-layered-2.5d-avatar.md  2026-03-28-avatar-agent-implementation.md
scripts/: claude-hook-speak.py  demo.sh  generate_layers.py  install.sh
src/avatar/: agent.py  agent_prompt.py  event_bus.py  main.py  personas.py  renderer.py  session_tracker.py
src/avatar/bridge/: cli.py  hook_notify.py  hook_stop.py  hook_think.py  hook_tool.py  mcp_server.py  paths.py
src/avatar/frames/: __init__.py  converter.py  cyberpunk.py  layered.py
src/avatar/voice/: summarizer.py
tests/: test_agent.py  test_event_bus.py  test_frames.py  test_generate_layers.py  test_layered.py  test_personas.py  test_renderer.py  test_session_tracker.py
